--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,11 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: maroon;
 }
 
 html {
   // 10 / 16 * 100 = 62.5%
   font-size: 62.5%;
   scroll-behavior: smooth;
+}
+body {
+  font-family: "Barlow", sans-serif;
+  font-family: "Fraunces", serif;
+  font-size: 1.8rem;
 }
