--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,21 +1,27 @@
 @use "../abstracts/index" as *;
 
 .nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background: none;
+  font-family: "Barlow", sans-serif;
+  @include align(flex, space-between, center);
   padding: 2rem 2rem;
   &__items {
     list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include align(flex, center, center);
     gap: 3rem;
+
     li {
       a {
         text-decoration: none;
-        font-size: 2rem;
         color: $white;
+      }
+      &:last-child a {
+        font-family: "Fraunces", serif;
+        text-transform: uppercase;
+        color: $vdsBlue;
+        padding: 1rem 1.5rem;
+        background-color: $white;
+        border-radius: 100rem;
       }
     }
   }
