--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,7 @@
 // import components
 @use "./scss/components/nav";
 @use "./scss/components/header";
+@use "./scss/components/cta";
 
 // import abstracts
 @use "./scss/abstracts/variables";
