--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -11,6 +11,14 @@ html {
 }
 body {
   font-family: "Barlow", sans-serif;
-  font-family: "Fraunces", serif;
   font-size: 1.8rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Fraunces", serif;
 }
