--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,4 +3,7 @@ $vdsBlue: #23303e;
 $vdgrayblue: #5a636c;
 $darkgrayblue: #818498;
 $grayblue: #a7abae;
-$yellow: #fad400;
+$yellow: #fad400a5;
+$hotRed: #fe7967c8;
+$cyan: #25564b;
+$darkblue: #19536b;
