--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
 @use "./scss/components/nav";
 @use "./scss/components/header";
 @use "./scss/components/cta";
+@use "./scss/components/testimonials";
 
 // import abstracts
 @use "./scss/abstracts/variables";
