--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,7 @@
 @use "./scss/components/header";
 @use "./scss/components/cta";
 @use "./scss/components/testimonials";
+@use "./scss/components/gallery";
 
 // import abstracts
 @use "./scss/abstracts/variables";
