--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -4,7 +4,7 @@
   @include align(flex, center, center);
   flex-direction: column;
   gap: 8rem;
-  padding: 10rem;
+  padding: 9rem 0;
 
   &__header {
     color: $grayblue;
@@ -32,7 +32,7 @@
     &__info {
       @include align(flex, center, center);
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.7rem;
       text-align: center;
 
       &__career {
