--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 @use "./scss/components/cta";
 @use "./scss/components/testimonials";
 @use "./scss/components/gallery";
+@use "./scss/components/footer";
 
 // import abstracts
 @use "./scss/abstracts/variables";
