--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,6 +8,11 @@ html {
   // 10 / 16 * 100 = 62.5%
   font-size: 62.5%;
   scroll-behavior: smooth;
+
+  // mobile
+  @media only screen and (max-width: 37.5em) {
+    font-size: 50%;
+  }
 }
 body {
   font-family: "Barlow", sans-serif;
