--- a/src/scss/components/_cta.scss
+++ b/src/scss/components/_cta.scss
@@ -11,6 +11,12 @@
     gap: 3.8rem;
     padding: 0 9rem;
 
+    @media only screen and (max-width: 37.5em) {
+      height: 40vh;
+      @include align(flex, center, center);
+      flex-direction: column;
+    }
+
     &__title {
       font-size: 3.5rem;
       width: 38rem;
@@ -80,6 +86,11 @@
 }
 .double-container {
   position: relative;
+  // mobile
+  @media only screen and (max-width: 37.5em) {
+    @include align(flex, center, center);
+    flex-direction: column;
+  }
 }
 
 .row__image__texts {
@@ -101,5 +112,13 @@
   color: $darkblue;
   .row__texts__title {
     color: $darkblue;
+  }
+}
+
+.row {
+  // mobile
+  @media only screen and (max-width: 37.5em) {
+    @include align(flex, center, center);
+    flex-direction: column;
   }
 }
