--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,6 +2,14 @@
 .header {
   width: 100%;
   height: 85vh;
+  // mobile
+  @media only screen and (max-width: 37.5em) {
+    font-family: "Fraunces", serif;
+    width: 100%;
+    background-repeat: no-repeat;
+    height: 70vh;
+    overflow: hidden;
+  }
 
   &__contents {
     color: $white;
@@ -9,11 +17,28 @@
     flex-direction: column;
     gap: 10.5rem;
     padding-top: 8rem;
+    // mobile
+    @media only screen and (max-width: 37.5em) {
+      @include align(flex, center, center);
+      flex-direction: column;
+    }
     &__heading {
       text-transform: uppercase;
       letter-spacing: 1.3rem;
       font-size: 4rem;
       font-weight: 700;
+      // mobile
+      @media only screen and (max-width: 37.5em) {
+        @include align(flex, center, center);
+        letter-spacing: 1rem;
+        font-size: 5rem;
+        font-weight: 700;
+        text-align: center;
+      }
     }
+  }
+  // mobile
+  @media only screen and (max-width: 37.5em) {
+    font-size: 45%;
   }
 }
