--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,7 +6,7 @@
   @media only screen and (max-width: 37.5em) {
     font-family: "Fraunces", serif;
     width: 100%;
-    background-repeat: no-repeat;
+    background-position: center;
     height: 70vh;
     overflow: hidden;
   }
