--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -38,7 +38,7 @@
           color: $vdgrayblue;
         }
       }
-      &:last-of-type a {
+      .nb {
         font-family: "Fraunces", serif;
         text-transform: uppercase;
         color: $vdsBlue;
