--- a/src/scss/components/_cta.scss
+++ b/src/scss/components/_cta.scss
@@ -12,7 +12,8 @@
     padding: 0 9rem;
 
     @media only screen and (max-width: 37.5em) {
-      height: 40vh;
+      height: 60vh;
+      text-align: center;
       @include align(flex, center, center);
       flex-direction: column;
     }
